@@ -2,11 +2,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{cucumber}
-  s.version = "0.3.102.1"
+  s.version = "0.3.102.2"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Aslak Helles\303\270y"]
-  s.date = %q{2009-09-23}
+  s.date = %q{2009-09-24}
   s.default_executable = %q{cucumber}
   s.description = %q{Executable Feature scenarios}
   s.email = ["aslak.hellesoy@gmail.com"]
