@@ -10,6 +10,9 @@ Using this release on a Rails project requires a rerun of script/generate cucumb
 * Added back a way to globally turn off transactions.
 * Renamed @allow_rescue tag to @allow-rescue.
 
+=== Bugfixes
+* Gracefully handle cases when optional regexp groups are not matched. Ex: /should( not)? be flashed '([^']*?)'$/ (Aslak Hellesøy)
+
 == 2009-09-22
 
 This release has some changes in the Rails support, so make sure you run "script/generate cucumber" after you upgrade.
